--- a/st.desktop
+++ b/st.desktop
@@ -4,7 +4,7 @@ Name=Simple Terminal
 GenericName=Terminal
 Comment=Suckless terminal emulator for X
 Icon=utilities-terminal
-Exec=st
+Exec=st --geometry: 165x45+177+103
 Categories=System;TerminalEmulator
 Encoding=UTF-8
 Keywords=shell;prompt;command;commandline;cmd;terminal;
